fix(1340): Fixed weekdays alignment

--- a/GUI/src/components/FormElements/FormDaySelect/FormDaySelect.module.scss
+++ b/GUI/src/components/FormElements/FormDaySelect/FormDaySelect.module.scss
@@ -24,10 +24,12 @@
 
         &:checked {
             background: get-color(sapphire-blue-10);
+            border-radius: 3px;
         }
 
         &:checked + label {
             background: get-color(sapphire-blue-10);
+            border-radius: 3px;
         }
     }
 
